--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <h1>Stupid Coaching</h1>
+      <br>
+      <%= yield %>
+    </div>
   </body>
 </html>
